<resources>
    <string name="app_name" translatable="false">Aisleron</string>
    <string name="app_title" translatable="false">Aisleron</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Aisleron</string>
    <string name="nav_header_subtitle">Fly through the shops!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="menu_in_stock">Home Stock</string>
    <string name="menu_needed">Needed</string>
    <string name="menu_all_items">All Items</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_all_shops">All Shops</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_about">About</string>
    <string name="menu_all_lists">All Lists</string>
    <string name="home">Home</string>
    <string name="display_options_header">Display Options</string>
    <string name="show_on_lock_screen">Show on lock screen</string>
    <string name="system_theme">System Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme">Theme</string>
    <string name="backup_restore_title">Backup/Restore</string>
    <string name="backup_database">Backup database</string>
    <string name="restore_database">Restore database</string>
    <string name="backup_folder">Backup folder</string>
    <string name="last_backup">Last backup:</string>
    <string name="last_restore">Last restore:</string>
    <string name="never">Never</string>
    <string name="db_backup_processing">Backup in progress…</string>
    <string name="db_backup_success">Backup completed</string>
    <string name="db_restore_processing">Restore in progress…</string>
    <string name="db_restore_success">Restore completed</string>
    <string name="db_restore_confirmation">Are you sure you want to replace your current database with backup %1$s?</string>
    <string name="db_restore_confirmation_title">Confirm Database Restore</string>
    <string name="backup_folder_success">Backup folder set</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_summary">Prevent the screen from turning off while viewing a list</string>
    <string name="starting_list">Starting list</string>
    <string name="use_dynamic_color">Dynamic color</string>
    <string name="use_dynamic_color_summary">Use system colors derived from the current wallpaper</string>
    <string name="pure_black_default">Theme Default</string>
    <string name="pure_black_economy">Economy</string>
    <string name="pure_black_business_class">Business Class</string>
    <string name="pure_black_first_class">First Class</string>
    <string name="pure_black_style">Pure Black style</string>
    <string name="language">Language</string>
    <string name="system_default">System Default</string>
    <string name="note_hint">Note hint</string>
    <string name="note_hint_button">Button</string>
    <string name="note_hint_summary">Summary</string>
    <string name="note_hint_indicator">Indicator (*)</string>
    <string name="preference_none">None</string>
    <string name="language_afrikaans_af" translatable="false">Afrikaans</string>
    <string name="language_arabic_ar" translatable="false">العربية</string>
    <string name="language_bulgarian_bg" translatable="false">Български</string>
    <string name="language_breton_br" translatable="false">Brezhoneg</string>
    <string name="language_english_en" translatable="false">English</string>
    <string name="language_french_fr" translatable="false">Français</string>
    <string name="language_german_de" translatable="false">Deutsch</string>
    <string name="language_italian_it" translatable="false">Italiano</string>
    <string name="language_polish_pl" translatable="false">Polski</string>
    <string name="language_portuguese_pt" translatable="false">Português</string>
    <string name="language_portuguese_pt_br" translatable="false">Português (Brasil)</string>
    <string name="language_russian_ru" translatable="false">Русский</string>
    <string name="language_spanish_es" translatable="false">Español</string>
    <string name="language_swedish_sv" translatable="false">Svenska</string>
    <string name="language_tamil_ta" translatable="false">தமிழ்</string>
    <string name="language_turkish_tr" translatable="false">Türkçe</string>
    <string name="language_ukrainian_uk" translatable="false">Українська</string>
    <string name="generic_error">ERROR: %1$s</string>
    <string name="delete_default_aisle_exception">ERROR: Default Aisle can\'t be removed</string>
    <string name="duplicate_product_name_exception">ERROR: Product Name must be unique</string>
    <string name="duplicate_location_name_exception">ERROR: Location Name must be unique</string>
    <string name="duplicate_aisle_name_exception">ERROR: Aisle Name must be unique per list</string>
    <string name="invalid_location_exception">ERROR: Invalid Location Id provided</string>
    <string name="invalid_product_exception">ERROR: Invalid Product Id provided</string>
    <string name="invalid_db_name_exception">ERROR: Unable to determine database name</string>
    <string name="invalid_db_backup_file_exception">ERROR: Invalid backup target</string>
    <string name="invalid_db_restore_file_exception">ERROR: Invalid restore source</string>
    <string name="duplicate_product_exception">ERROR: Cannot add a duplicate of an existing product</string>
    <string name="duplicate_location_exception">ERROR: Cannot add a duplicate of an existing location</string>
    <string name="sample_data_creation_exception">ERROR: Cannot load sample data into an existing database</string>
    <string name="loyalty_card_provider_missing_exception">ERROR: Loyalty card provider not installed or activity not found</string>
    <string name="aisle_move_exception">ERROR: Aisle move must be within the same Location</string>
    <string name="loyalty_card_not_found_exception">ERROR: Loyalty card not found</string>
    <string name="sign_out_exception">ERROR: An error occurred while signing out</string>
    <string name="missing_credential_exception">ERROR: Email and password cannot be blank</string>
    <string name="sign_in_exception">ERROR: An error occurred while signing in</string>
    <string name="invalid_credential_exception">ERROR: Email or password is incorrect</string>
    <string name="unconfirmed_email_exception">ERROR: Email address not confirmed</string>
    <string name="auth_exception">ERROR: Authentication failed</string>
    <string name="network_exception">ERROR: Unable to connect to sync service</string>
    <string name="about_support_header">Support</string>
    <string name="about_legal_header">Licenses &amp; Policies</string>
    <string name="about_support_version_title">Version history</string>
    <string name="about_support_report_issue_title">Report an issue</string>
    <string name="about_support_sourcecode_title">Source code</string>
    <string name="about_legal_license_title">Aisleron License</string>
    <string name="about_legal_privacy_title">Aisleron Privacy Policy</string>
    <string name="about_support_version_summary">"Current version: %1$s"</string>
    <string name="about_support_report_issue_summary">Log a bug or feature request</string>
    <string name="about_support_sourcecode_summary">View source code on GitHub</string>
    <string name="about_legal_license_summary">GNU Affero General Public License (AGPL) version 3</string>
    <string name="about_legal_privacy_summary">View Privacy Policy online</string>
    <string name="about_support_documentation_title">Documentation</string>
    <string name="about_support_documentation_summary">View documentation online</string>
    <string name="about_legal_3rdparty_title">3rd Party Licenses</string>
    <string name="about_legal_3rdparty_summary">View 3rd party licenses online</string>
    <string name="about_contribute_header">Contribute</string>
    <string name="about_contribute_translate_title">Translate</string>
    <string name="about_contribute_translate_summary">Help to make Aisleron available in more languages</string>
    <string name="about_contribute_financial_title">Financial Contribution</string>
    <string name="about_contribute_financial_summary">Support Aisleron with a financial contribution</string>
    <string name="welcome_app_title">Getting Started</string>
    <string name="welcome_message">We\'re excited to help you make your shopping experience easier and more organized. To get started, choose one of the following options:</string>
    <string name="welcome_add_own_product">&lt;h3&gt;Add Your Own Products&lt;/h3&gt; Start building a personalized shopping list from scratch by adding Shops, Aisles, and Products</string>
    <string name="welcome_load_sample_items">&lt;h3&gt;Load Sample Items&lt;/h3&gt; Try out a pre-filled list to get a feel for how the app works</string>
    <string name="welcome_import_db">&lt;h3&gt;Import an Existing Database&lt;/h3&gt; Bring in a shopping list from an earlier backup by importing it from the Settings page</string>
    <string name="welcome_documentation">&lt;h3&gt;View the Documentation&lt;/h3&gt; View the Aisleron documentation online to find out more about the app\'s features</string>
    <string name="welcome_title">Welcome to Aisleron</string>
    <string name="empty_list_title">This list is currently empty</string>
    <string name="empty_list_description">This could be because:</string>
    <string name="empty_list_reasons">
        - No items are needed at the moment
        \n- No products or aisles have been added yet
        \n- Items exist but aren’t assigned to a visible aisle
    </string>
    <string name="empty_list_instructions">
        You can add products and aisles using the Add button at the bottom right,
        or use the search bar at the top of the screen to find products and update
        their status or aisle assignment.
    </string>
    <string name="aisleron_documentation_url" translatable="false">https://aisleron.com/docs/documentation/</string>
    <string name="aisleron_version_history_url" translatable="false">https://aisleron.com/docs/version-history</string>
    <string name="aisleron_translate_url" translatable="false">https://aisleron.com/docs/contribute/translate</string>
    <string name="aisleron_financial_contribution_url" translatable="false">https://aisleron.com/docs/contribute/financial_contributions</string>
    <string name="aisleron_reporting_issues_url" translatable="false">https://aisleron.com/docs/reporting-issues</string>
    <string name="aisleron_sourcecode_url" translatable="false">https://github.com/aisleron/aisleron</string>
    <string name="aisleron_license_url" translatable="false">https://aisleron.com/docs/licenses-policies/aisleron-license</string>
    <string name="aisleron_privacy_policy_url" translatable="false">https://aisleron.com/docs/licenses-policies/aisleron-privacy-policy</string>
    <string name="aisleron_3rd_party_licenses_url" translatable="false">https://aisleron.com/docs/licenses-policies/3rd-party-licenses</string>
    <string name="aisleron_sync_help_url" translatable="false">https://aisleron.com/docs/sync-service/</string>
    <string name="shop_loyalty_card_name">Loyalty Card</string>
    <string name="loyalty_card">Loyalty card</string>
    <string name="delete_loyalty_card">Delete loyalty card</string>
    <string name="get_loyalty_card">Lookup loyalty card</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="save">Save</string>
    <string name="aisleron_logo">Aisleron logo</string>
</resources>