<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/display_options_header">
        <SwitchPreferenceCompat
            app:key="display_lockscreen"
            app:title="@string/show_on_lock_screen" />
        <ListPreference
            android:defaultValue="system_theme"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:key="application_theme"
            android:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/backup_restore_title">
        <Preference
            android:title="@string/backup_folder"
            app:key="backup_folder" />
        <Preference
            android:title="@string/backup_database"
            app:key="backup_database" />
        <Preference
            android:title="@string/restore_database"
            app:key="restore_database" />
    </PreferenceCategory>
</PreferenceScreen>

