<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/text_margin"
    tools:context=".ui.product.ProductFragment">

    <TextView
        android:id="@+id/txt_product_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/edt_product_name"
        android:text="@string/product_name" />

    <EditText
        android:id="@+id/edt_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="48dp" />

    <CheckedTextView
        android:id="@+id/chk_product_in_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_in_stock"
        android:minHeight="48dp"
        android:gravity="center_vertical"
        android:checked="false"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple" />


    <Button
        android:id="@+id/btn_save_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>