<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2025 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.welcome.WelcomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcome_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="@drawable/background_circle"
                android:contentDescription="@string/aisleron_logo"
                android:padding="@dimen/text_margin"
                android:src="@drawable/aisleron_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_welcome_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/text_margin"
                android:paddingTop="20dp"
                android:text="@string/welcome_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/title_margin" />

            <TextView
                android:id="@+id/txt_welcome_subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/subtitle_vertical_padding"
                android:paddingHorizontal="@dimen/text_margin"
                android:text="@string/nav_header_subtitle"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/txt_welcome_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_welcome_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_margin"
                android:text="@string/welcome_message"
                app:layout_constraintTop_toBottomOf='@id/imageView' />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/txt_welcome_add_own_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/menu_padding"
                android:background="?attr/selectableItemBackground"
                android:text="@string/welcome_add_own_product"
                app:drawableEndCompat="@drawable/baseline_arrow_right_24" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/txt_welcome_load_sample_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/menu_padding"
                android:text="@string/welcome_load_sample_items"
                app:drawableEndCompat="@drawable/baseline_arrow_right_24" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/txt_welcome_import_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/menu_padding"
                android:text="@string/welcome_import_db"
                app:drawableEndCompat="@drawable/baseline_arrow_right_24" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginVertical="8dp">

            <TextView
                android:id="@+id/txt_welcome_documentation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/menu_padding"
                android:text="@string/welcome_documentation"
                app:drawableEndCompat="@drawable/baseline_arrow_right_24" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>